--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,24 @@
 body {
   font-family: 'Cormorant Garamond', serif;
   background-color: #e5ddd1;
+  font-size: 30px;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 10%;
 }
 
 nav {
   background-color: #c0ab8e;
-  width: 80%;
+  width: 100%;
 }
 
 #nav_elements {
   list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 #nav_elements li,
@@ -42,7 +44,26 @@ header img {
   width: 100px;
 }
 
-/* The switch - the box around the slider /
+#item-display {
+  background-color: #c0ab8e;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#item-display * {
+  padding: 10px;
+  margin: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+/* toggle switch stuff*/
+
 .switch {
   position: relative;
   display: inline-block;
@@ -50,14 +71,12 @@ header img {
   height: 34px;
 }
 
-/ Hide default HTML checkbox /
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/ The slider /
 .slider {
   position: absolute;
   cursor: pointer;
@@ -82,29 +101,24 @@ header img {
   transition: .4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
-/ Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
-}
-
-.hidden {
-  display: none;
 }
